--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </head>
 
   <body>
-    <!-- container start -->
+     <!-- container start -->
     <div class="wrapper container">
       <!-- profile start -->
       <div class="profile">
         <div class="profile-name">
           <h1>A5 Universe</h1>
-          <span class="job">Android developer</span>
+          <span class="job">Software Engineer</span>
         </div>
         <div class="profile-img">
           <img src="./img/profile_pic.jpg" alt="Logo" />
@@ -669,7 +669,7 @@
     <!-- loading animation start-->
     <div id="preloader" class="preloader">
       <div class="spinner">
-        <img src="img/a5_logo.svg" alt="" />
+        <img src="img/a5_white.png" alt="" />
       </div>
     </div>
     <!-- loading animation start-->
@@ -680,6 +680,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
     <script src="js/main.js"></script>
-
+    
   </body>
 </html>
