--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
         </ul>
 
         <div class="btn-container">
-          <button class="btn">
+          <button class="btn" onclick="downloadResume()">
             Downolad Resume
             <i class="fa-solid fa-download"></i>
           </button>
         </div>
+
       </div> 
       <!-- profile end -->
 
@@ -377,15 +378,17 @@
                 <li data-profile="AI">AI</li>
               </ul>
               <div class="project-container">
-                <div class="active box Android">
+
+                <div class="active box Android" onclick="downloadHd5()">
                   <div class="image">
-                    <img src="img/portfolio/work-01.jpg" />
+                    <img src="img/portfolio/hd5_wallpaper.png" />
                   </div>
                   <div class="details">
-                    <h4>babel admin</h4>
-                    <p>An admin template design.</p>
+                    <h4>HD5 Wallpaper</h4>
+                    <p>High-quality and user-friendly wallpaper application.</p>
                   </div>
                 </div>
+
                 <div class="active box Android">
                   <div class="image">
                     <img src="img/portfolio/work-02.jpg" />
@@ -433,7 +436,7 @@
                 </div>
                 <div class="active box AI">
                   <div class="image">
-                    <img src="img/portfolio/work-01.jpg" />
+                    <img src="img/portfolio/work-02.jpg" />
                   </div>
                   <div class="details">
                     <h4>bob stayler</h4>
