--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <li class="active" data-profile="All">All</li>
                 <li data-profile="Android">Android</li>
                 <li data-profile="Website">Website</li>
-                <li data-profile="Flutter">Flutter</li>
+                <li data-profile="CrossPlatform">CrossPlatform</li>
                 <li data-profile="AI">AI</li>
               </ul>
               <div class="project-container">
@@ -416,7 +416,7 @@
                     <p>My current workspace design.</p>
                   </div>
                 </div>
-                <div class="active box Flutter">
+                <div class="active box CrossPlatform">
                   <div class="image">
                     <img src="img/portfolio/work-04.jpg" />
                   </div>
@@ -425,7 +425,7 @@
                     <p>Html template design.</p>
                   </div>
                 </div>
-                <div class="active box Flutter">
+                <div class="active box CrossPlatform">
                   <div class="image">
                     <img src="img/portfolio/work-05.jpg" />
                   </div>
