date: 25-10-2023 change: image replace

--- a/index.html
+++ b/index.html
@@ -351,74 +351,74 @@
 
                 <div class="active box Android">
                   <div class="image">
-                    <img src="img/project/work-02.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>george motion</h4>
-                    <p>An motion graphic design.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
                 <div class="active box Website">
                   <div class="image">
-                    <img src="img/project/work-06.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>amazon travel</h4>
-                    <p>Nature photography work.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
                 <div class="active box Website">
                   <div class="image">
-                    <img src="img/project/work-03.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>my workspace</h4>
-                    <p>My current workspace design.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
                 <div class="active box CrossPlatform">
                   <div class="image">
-                    <img src="img/project/work-04.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>recoba template</h4>
-                    <p>Html template design.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
                 <div class="active box CrossPlatform">
                   <div class="image">
-                    <img src="img/project/work-05.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>Doddy App</h4>
-                    <p>Mobile app ui kit design.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
                 <div class="active box AI">
                   <div class="image">
-                    <img src="img/project/work-02.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>bob stayler</h4>
-                    <p>Illustration characher design.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
                 <div class="active box AI">
                   <div class="image">
-                    <img src="img/project/work-08.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>exemag wordpress theme</h4>
-                    <p>Multiconcept Blog Theme.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
                 <div class="active box AI">
                   <div class="image">
-                    <img src="img/project/work-09.jpg" />
+                    <img src="img/project/coming.jpg" />
                   </div>
                   <div class="details">
-                    <h4>babel admin Html code</h4>
-                    <p>An admin template design.</p>
+                    <h4>coming</h4>
+                    <p>coming soon.</p>
                   </div>
                 </div>
               </div>
