--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="serv">
                   <div class="icon"><i class="fas fa-pen-nib"></i></div>
                   <h3>Design</h3>
-                  <p>I have been working on Figma design .</p>
+                  <p>I have been working on Canva & Figma design .</p>
                 </div>
                 <div class="serv">
                   <div class="icon">
